update the launch_clauster